--- a/netflis-react/package.json
+++ b/netflis-react/package.json
@@ -8,9 +8,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.1",
+    "axios": "^0.27.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-hook-form": "^7.31.1",
+    "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
+    "redux-persist": "^6.0.0",
     "sass": "^1.51.0"
   },
   "devDependencies": {
