--- a/admin/package.json
+++ b/admin/package.json
@@ -11,8 +11,11 @@
     "@mui/system": "5.6.1",
     "@mui/x-data-grid": "5.8.0",
     "@types/react": "18.0.1",
+    "axios": "^0.27.2",
+    "firebase": "^8.3.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-hook-form": "^7.31.1",
     "react-icons": "4.3.1",
     "react-router-dom": "6.3.0",
     "recharts": "2.1.9"
@@ -25,5 +28,17 @@
   },
   "devDependencies": {
     "react-scripts": "latest"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
